--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node": "19.6.1"
+    "node": "^18.14.2"
   },
   "devDependencies": {
     "concurrently": "^5.1.0"
