--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "^16.18.0"
+  },
   "devDependencies": {
     "concurrently": "^5.1.0"
   }
